ChangeLog:

nxcompext-3.3.0-2

- Updated VERSION.

nxcompext-3.3.0-1

- Opened the 3.3.0 branch based on nxcompext-3.2.0-1.

nxcompext-3.2.0-1

- Opened the 3.2.0 branch based on nxcompext-3.1.0-2.

nxcompext-3.1.0-2

- Updated file VERSION to match the current release version.

nxcompext-3.1.0-1

- Opened the 3.1.0 branch based on nxcompext-3.0.0-18.

nxcompext-3.0.0-18

- Removed the remaining debug output.

nxcompext-3.0.0-17

- Changed the copyright notices at the beginning of the files that
  were referring to NXPROXY to refer to NXCOMPEXT.

nxcompext-3.0.0-16

- Handle the reply failure in NXGetShmemParameters().

nxcompext-3.0.0-15

- Separated the functionalities made available by NXQueryDisplay()
  in three distinct functions:

  NXDisplayReadable()  Query the number of bytes readable from
                       the display connection.

  NXDisplayFlushable() Query the number of the outstanding bytes
                       to flush to the display connection.

  NXDisplayCongestion() Return a value between 0 and 9 indicating
                        the congestion level of the NX transport.

- Renamed NXQueryDisplayError() to NXDisplayError().

nxcompext-3.0.0-14

- Removed support for Rdp, Tight and Hextile packed images encod-
  ing since they have been made obsolete by the new NX server.

- Changed the copyright attribution from Medialogic to NoMachine.

nxcompext-3.0.0-13

- Allocate 1024 additional bytes for the Jpeg compression, instead
  of 512, to avoid failures on very tiny images.

- Removed support for the special *PNG_JPEG* pack method.

nxcompext-3.0.0-12

- Implemented the NXEncodeBitmap() method. This is a very simple
  encoder removing the 4th byte in 32 bits-per-plane images. For
  the other pixmap depths it simply returns a pointer to the orig-
  inal image data, saving the copy. This encoding is intended to
  better leverage the stream compression on low bandwidth links.

- Removed the quality parameter from the RGB/RLE encoding function.
